# pipeline_dashboard

./: .env  CLAUDE.md  README.md  Training  - Programme complet.csv  app.py  pyproject.toml  requirements.txt  start.sh  strava_laps_to_supabase.py  strava_streams_to_supabase.py  strava_sync.py  strava_to_supabase.py
.github/workflows/: strava_sync.yml
docs/: auth.js  dashboard.html  gpx-creator.html  index.html  journal.html  settings.html
scripts/: check_latest_activity.py  import_csv.py  login.py
table sql/: create_streams_table.sql  create_table.sql  migration_multi_user.sql
templates/: gpx-creator.html  index.html  index.html.backup  login.html  map.html
